data/derived/fa15/progs/unify/prog2628.ml.out
Characters 103-109:
  else ((sumList(digitsOfInt x)) + loop y) in
                                   ^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
